--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@ git remote add origin https://github.com/ccjianfeng/git.git
 git push -u origin main
 git push
    //本地文件上传到仓库
+   测试ssh
 
 </html>
